<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myProfile"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/light_black"
        android:layout_marginTop="4dp" />

    <EditText
        android:id="@+id/emailAccount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/field_margin"
        android:background="@drawable/field_bk"
        android:hint="@string/email_profile"
        android:padding="@dimen/base_padding1x"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/field_margin"
        android:background="@drawable/field_bk"
        android:hint="@string/firstNameHint"
        android:padding="@dimen/base_padding1x"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/mailPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/field_margin"
        android:background="@drawable/field_bk"
        android:hint="@string/password_profile"
        android:padding="@dimen/base_padding1x"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/field_margin"
        android:gravity="center"
        android:background="@color/pink"
        android:text="@string/updateAccountButton"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />

</LinearLayout>
