<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/light_black"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/pink" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_black"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/pink"
        />

</LinearLayout>
